alignment fixes

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -56,6 +56,8 @@ to {
     }
     &_img img {
        margin: auto;
+       display: flex;
+       justify-content: center;
        width: 200px;
        height: 200px;
        border-radius: 50%;
@@ -177,6 +179,7 @@ to {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     gap:2rem;
     @media  screen and (max-width:576px) {
         flex-direction: column;
@@ -186,7 +189,7 @@ to {
     {
         font-weight: bold;
         font-size:22px;
-        padding: 15px 0;
+        padding: 15px 30px;
         min-width: 250px;
         border-radius: 50px;
         -webkit-border-radius: 50px;
